[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cxone_api"
dynamic = ["version"]
dependencies = [
    "requests==2.32.4",
    "jsonpath_ng==1.7.0",
    "validators==0.34.0",
    "dataclasses-json==0.6.7",
    "deprecation==2.1.0",
    "aenum==3.1.15"
]
description = "CheckmarxOne Async API"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"cxone_api" = "cxone_api"}

[tool.setuptools.dynamic]
version = { attr = "cxone_api.__version__.__version__" }
